welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:4: error: not found: value isMoM
} else if(isMorning==true && isMoM==false) {
                             ^